Убраны часы и уведомление о времени блокирования

--- a/blueprints/site/templates/site/_footer.html
+++ b/blueprints/site/templates/site/_footer.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="{{ url_for('.static', filename='js/select2.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/select2_locale_ru.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/ie6.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/clock.js') }}"></script>
+{#<script type="text/javascript" src="{{ url_for('static', filename='js/clock.js') }}"></script>#}
 <script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
 
 <!--[if IE]>
