--- a/blueprints/site/templates/site/registration.html
+++ b/blueprints/site/templates/site/registration.html
@@ -57,7 +57,7 @@
     <input type="hidden" name="ticket" value="{{ ticket }}" />
     <input type="hidden" name="flag" value="True" />
 
-    <legend><big>Данные посетителя</big><small class="pull-right">Талончик заблокирован для Вас до {{ blocked_ticket['block_until']|datetimeformat('HH:mm', rebase=False) }}</small></legend>
+    <legend><big>Данные посетителя</big>{#<small class="pull-right">Талончик заблокирован для Вас до {{ blocked_ticket['block_until']|datetimeformat('HH:mm', rebase=False) }}</small>#}</legend>
     <div class="control-group">
         {{ form.lastname.label(class="control-label") }}
         <div class="controls">
