--- a/blueprints/site/templates/site/search_lpu.html
+++ b/blueprints/site/templates/site/search_lpu.html
@@ -106,6 +106,16 @@
         <p>Для записи на прием перейдите по <a href="{{ url_for('.division', lpu_id=40) }}">ссылке</a>.</p>
     </div>
 </div>
+<!-- Modal -->
+<div id="lpu9Modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="lpu9ModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="lpu9ModalLabel">Запись online невозможна</h3>
+    </div>
+    <div class="modal-body">
+        <p>Запись к специалистам ГБУЗ «Пензенская областная офтальмологическая больница» осуществляется врачами в ЛПУ по месту жительства.</p>
+    </div>
+</div>
     <script type="text/javascript">
         function searchLpu() {
             $("#search_table").html("");
@@ -130,6 +140,8 @@
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu28Modal\').modal();">' + val + '</a></li>');
                     }else if (key == '42'){
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu42Modal\').modal();">' + val + '</a></li>');
+                    }else if (key == '9'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu9Modal\').modal();">' + val + '</a></li>');
                     }else{
                         $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
                     }
@@ -161,6 +173,8 @@
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu28Modal\').modal();">' + val + '</a></li>');
                     }else if (key == '42'){
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu42Modal\').modal();">' + val + '</a></li>');
+                    }else if (key == '9'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu9Modal\').modal();">' + val + '</a></li>');
                     }else{
                         $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
                     }
@@ -192,6 +206,8 @@
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu28Modal\').modal();">' + val + '</a></li>');
                     }else if (key == '42'){
                         $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu42Modal\').modal();">' + val + '</a></li>');
+                    }else if (key == '9'){
+                        $items.push('<li><a href="javascript:void(0);" onclick="$(\'#lpu9Modal\').modal();">' + val + '</a></li>');
                     }else{
                         $items.push('<li><a href="{{ url_for('.division') }}' + key + '/">' + val + '</a></li>');
                     }
