--- a/blueprints/site/templates/site/email/email.html
+++ b/blueprints/site/templates/site/email/email.html
@@ -40,7 +40,7 @@
             <tr><td>Врач:</td><td colspan="2">
                 {% set doctor=session.get('doctor') %}
                 {% set office=session.get('office') %}
-                {{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}{% if office %} (кабинет: {{ office }}){% endif %}<br/>({{ doctor.get('speciality') }})
+                {% if doctor %}{{ doctor['lastName'] }} {{ doctor['firstName'] }} {{ doctor['patronymic'] }}{% if office %} (кабинет: {{ office }}){% endif %}<br/>({{ doctor.get('speciality') }}){% endif %}
             </td></tr>
             <tr><td>Дата и время приёма:</td><td colspan="2">{{ session.get('date', '') }} {{ session.get('start_time', '') }} - {{ session.get('finish_time', '') }}</td></tr>
             <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
