--- a/blueprints/site/templates/site/_footer.html
+++ b/blueprints/site/templates/site/_footer.html
@@ -24,3 +24,5 @@
 {% if counter %}
 <div id="counter">{{ counter|safe }}</div>
 {% endif %}
+<div class="muted">Информационный ресурс является собственностью Министерства здравоохранения Пензенской области. <br>
+Любое использование функционала ресурса, его дизайна, либо информационных материалов данного ресурса в коммерческих целях запрещено.</div>
