--- a/blueprints/site/templates/site/index.html
+++ b/blueprints/site/templates/site/index.html
@@ -14,7 +14,7 @@
         </div>
         {%- endfor -%}
     </div>
-    <p class="pull-right">
+    <p class="text-right">
         <a href="{{ url_for('.search') }}" class="btn btn-large" title="Поиск врача"><i class="icon-search"></i> Поиск врача</a>
         <a href="{{ url_for('.search_lpu') }}" class="btn btn-large" title="Поиск ЛПУ"><i class="icon-search"></i> Поиск мед. учреждения</a>
         <a href="{{ url_for('.patient_tickets') }}" class="btn btn-large" title="Поиск существующих записей на приём к врачу"><i class="icon-search"></i> Мои записи</a>
