--- a/blueprints/site/templates/site/_footer.html
+++ b/blueprints/site/templates/site/_footer.html
@@ -24,5 +24,5 @@
 {% if counter %}
 <div id="counter">{{ counter|safe }}</div>
 {% endif %}
-<div class="container muted" style="margin-bottom: 10px"><hr>Информационный ресурс является собственностью Министерства здравоохранения Пензенской области. <br>
+<div class="container muted" style="margin-bottom: 10px"><hr>Информационный ресурс является собственностью ФГБУ «Гематологический научный центр». <br>
 Любое использование функционала ресурса, его дизайна, либо информационных материалов данного ресурса в коммерческих целях запрещено.</div>
