--- a/blueprints/site/templates/site/email/email.html
+++ b/blueprints/site/templates/site/email/email.html
@@ -15,6 +15,7 @@
             <tr><td>ФИО (Пациент):</td><td colspan="2">{{ data['lastname'] }} {{ data['firstname'] }} {{ data['patronymic'] }}</td></tr>
             <tr><td>Дата рождения:</td><td colspan="2">{{ data['day'] }}.{{ data['month'] }}.{{ data['year'] }} г.</td></tr>
             <tr><td>Ваш идентификатор:*</td><td colspan="2">{{ ticket_uid.split('/')[1] }}</td></tr>
+            {% if data.get('client_id') %}
             <tr><td>№ Амбулаторной карты:</td><td colspan="2">{{ data.get('client_id') }}</td></tr>
             {% else %}
             {% if data['document_type'] == 'policy_type_2' %}
