--- a/blueprints/site/templates/site/ticket_info.html
+++ b/blueprints/site/templates/site/ticket_info.html
@@ -10,10 +10,14 @@
 <div class="span10 offset1 no_print">
 <table class="no_shadow_print table">
     <thead>
-    <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ session.get('ticket_uid', '') }}</h4></th></tr>
+    {% set ticket_uid = session.get('ticket_uid') %}
+    <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №ticket_uid</h4></th></tr>
     </thead>
     <tr><th>ФИО (Пациент):</th><td colspan="2">{{ session.get('patient', {}).get('name', '') }}</td></tr>
     {% if session.get('patient', {}).get('birthday') %}<tr><th>Дата рождения:</th><td colspan="2">{{ session.get('patient', {}).get('birthday', '') }} г.</td></tr>{% endif %}
+    <tr><td style="text-decoration: underline;">Ваш идентификатор*:</td>
+        <td colspan="2" style="text-decoration: underline;"><b>{{ ticket_uid.split('/')[1] }}</b></td>
+    </tr>
     {% if client_id %}
     <tr><th>№ Амбулаторной карты:</th><td colspan="2">{{ client_id }}</td></tr>
     {% else %}
@@ -44,6 +48,7 @@
     <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
     <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении, или отмените запись, воспользовавшись ссылкой: <a href="{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}" title="Отмена записи">{{ request.scheme }}://{{ request.host }}{{ url_for('.dequeue', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), uid=session.get('ticket_hash', '')) }}</a>.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
+    <tr><td colspan="3" style="font-size: 13px">* Уникальный номер в медицинской информационной системе понадобится Вам для получения талона в электронной очереди.</td></tr>
 </table>
 <br />
 <div class="no_print" class="form-horizontal">
